Replace deprecated URL constructor with URI